fixed gap in sign in sign p page

--- a/app/assets/stylesheets/components/_form_legend_clear.scss
+++ b/app/assets/stylesheets/components/_form_legend_clear.scss
@@ -236,7 +236,7 @@ legend ~ div.form-check:first-of-type {
   grid-template-columns: 1fr 1fr;
   justify-items: center;
   margin-bottom: 20px;
-  margin-top:0px;
+  margin-top:20px;
 
   .link {
     margin-top:20px;
