--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -98,7 +98,7 @@
   .nav-logo {
     background-image: url("https://res.cloudinary.com/ddaoe4tdm/image/upload/v1669534225/taketrailsg_futfhs.svg");
     background-repeat: no-repeat;
-    background-size: 150px;
+    background-size: 140px;
     background-position: center;
     display: flex;
     height:50px;
